--- a/planningbuddy/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/planningbuddy/app/src/main/res/menu/bottom_nav_menu.xml
@@ -15,5 +15,13 @@
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
+    <item
+        android:id="@+id/navigation_to_do"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/title_todo" />
+    <item
+        android:id="@+id/navigation_courses"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/title_courses" />
 
 </menu>
