course list functionality

--- a/planningbuddy/app/src/main/res/layout/fragment_courses.xml
+++ b/planningbuddy/app/src/main/res/layout/fragment_courses.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.courses.CourseFragment">
 
-    <TextView
+    <ListView
         android:id="@+id/text_courses"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,4 +19,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextClassName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:layout_marginTop="16dp"
+        android:hint="Enter Class Name"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="89dp" />
+
+    <Button
+        android:id="@+id/btnAddClass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Add Class"
+        app:layout_constraintBottom_toTopOf="@+id/text_courses"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextClassName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
