--- a/planningbuddy/app/src/main/res/values/colors.xml
+++ b/planningbuddy/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="darkpurple">#7A3B67</color>
+    <color name="grey">#353639</color>
+
 </resources>
