--- a/planningbuddy/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/planningbuddy/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,17 +7,17 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_todo"
+        android:id="@+id/navigation_to_do"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/ToDoList" />
 
     <item
-        android:id="@+id/navigation_assigment"
+        android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/Assigments" />
 
     <item
-        android:id="@+id/navigation_exams"
+        android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/Exams" />
 
