Updated add_course_popup.xml and changed popups to not dismiss on tap.

--- a/planningbuddy/app/src/main/res/layout/add_course_popup.xml
+++ b/planningbuddy/app/src/main/res/layout/add_course_popup.xml
@@ -46,6 +46,74 @@
             android:hint="Objects and Design" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/courseNameInputLayout"
+        android:padding="5dp">
+
+        <RadioButton
+            android:id="@+id/radioLecture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="Lecture" />
+
+        <RadioButton
+            android:id="@+id/radioLab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="Lab" />
+
+        <RadioButton
+            android:id="@+id/radioStudio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="Studio" />
+
+        <RadioButton
+            android:id="@+id/radioRecitation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="Recitation" />
+    </RadioGroup>
+
+    <TextView
+        android:id="@+id/startTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/radioGroup"
+        android:text="Starts:\t" />
+
+    <EditText
+        android:id="@+id/editTextStartDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/radioGroup"
+        android:layout_toRightOf="@+id/startTextView"
+        android:ems="10"
+        android:inputType="date" />
+
+    <TextView
+        android:id="@+id/endTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editTextStartDate"
+        android:text="Ends:\t\t" />
+
+    <EditText
+        android:id="@+id/editTextEndDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editTextStartDate"
+        android:layout_toRightOf="@+id/endTextView"
+        android:ems="10"
+        android:inputType="date" />
+
 
 
 </RelativeLayout>
