--- a/planningbuddy/app/src/main/res/layout/fragment_notifications.xml
+++ b/planningbuddy/app/src/main/res/layout/fragment_notifications.xml
@@ -33,4 +33,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_notifications" />
+    <ListView
+        android:id="@+id/examsListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="1dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
