--- a/planningbuddy/app/src/main/res/layout/add_assignments_popup.xml
+++ b/planningbuddy/app/src/main/res/layout/add_assignments_popup.xml
@@ -1,37 +1,66 @@
-<!-- add_assignment_popup.xml -->
+<!-- add_exam_popup.xml -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/addAssignmentPopup"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="20dp"
-    android:background="#ffcccb">
+    android:background="#c2f7ca">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/assignmentTitleInputLayout"
+        android:id="@+id/assignmentNameInputLayout"
         android:layout_width="match_parent"
         android:padding="5dp"
         android:layout_height="wrap_content">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/assignmentNameEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Assignment Title" />
+            android:hint="Assignment Name" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/assignmentDescriptionInputLayout"
+        android:id="@+id/assignmentDateInputLayout"
         android:layout_width="match_parent"
         android:padding="5dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/assignmentTitleInputLayout">
+        android:layout_below="@+id/assignmentNameInputLayout">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/assignmentDateEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Assignment Description" />
+            android:hint="Due Date (yyyy-mm-dd)" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!-- Add other fields specific to assignments -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/assignmentCourseInputLayout"
+        android:layout_width="match_parent"
+        android:padding="5dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/assignmentDateInputLayout">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/assignmentCourseEditText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Assignment Course" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/assignmentCompletedCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/assignmentCourseInputLayout"
+        android:text="Completed" />
+    <Button
+        android:id="@+id/addAssignmentButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Assignment"
+        android:layout_below="@+id/assignmentCompletedCheckBox"/>
+
 
 </RelativeLayout>
