assignment sort by date and course

--- a/planningbuddy/app/src/main/res/layout/fragment_dashboard.xml
+++ b/planningbuddy/app/src/main/res/layout/fragment_dashboard.xml
@@ -33,6 +33,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_dashboard" />
+    <Spinner
+        android:id="@+id/sortSpinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/assignmentListView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"/>
+
     <ListView
         android:id="@+id/assignmentListView"
         android:layout_width="match_parent"
