--- a/planningbuddy/app/src/main/res/layout/list_task_item.xml
+++ b/planningbuddy/app/src/main/res/layout/list_task_item.xml
@@ -5,6 +5,13 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="8dp">
+    <CheckBox
+        android:id="@+id/completionCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"/>
 
     <!-- TextView to display task information -->
     <TextView
