--- a/planningbuddy/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/planningbuddy/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,22 +8,22 @@
 
     <item
         android:id="@+id/navigation_to_do"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/todolist"
         android:title="@string/ToDoList" />
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/assigment"
         android:title="@string/Assigments" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/exams"
         android:title="@string/Exams" />
 
     <item
         android:id="@+id/navigation_courses"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/courses"
         android:title="@string/Courses" />
 
 </menu>
