--- a/planningbuddy/app/src/main/res/layout/add_course_popup.xml
+++ b/planningbuddy/app/src/main/res/layout/add_course_popup.xml
@@ -43,14 +43,26 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Objects and Design" />
+            android:hint="Prof. Burdell" />
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/courseLocationInputLayout"
+        android:layout_width="350dp"
+        android:padding="5dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/courseNameInputLayout">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="CULC 200" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/courseNameInputLayout"
+        android:layout_below="@+id/courseLocationInputLayout"
         android:padding="5dp">
 
         <RadioButton
@@ -113,6 +125,12 @@
         android:layout_toRightOf="@+id/endTextView"
         android:ems="10"
         android:inputType="date" />
+    <Button
+        android:id="@+id/addCourseButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Course"
+        android:layout_below="@+id/editTextEndDate"/>
 
 
 
