--- a/planningbuddy/app/src/main/res/layout/fragment_to_do.xml
+++ b/planningbuddy/app/src/main/res/layout/fragment_to_do.xml
@@ -4,60 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
     tools:context=".ui.todo.ToDoFragment">
-
-    <!--    <EditText-->
-<!--        android:id="@+id/editTextClassName"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:textColor="@color/white"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_margin="16dp"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:hint="Enter Class Name"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        tools:layout_editor_absoluteX="89dp" />-->
-
-    <ListView
-        android:id="@+id/text_to_do"
-        android:layout_width="305dp"
-        android:layout_height="458dp"
+    <TextView
+        android:id="@+id/text_todo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
-        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.177">
+        app:layout_constraintTop_toTopOf="parent" />
 
-    </ListView>
-    <EditText
-        android:id="@+id/editTextToDoName"
-        android:layout_width="match_parent"
-        android:textColor="@color/white"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_marginTop="16dp"
-        android:hint="@string/enter_class_name"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="89dp" />
-
-    <Button
-        android:id="@+id/btnAddTask"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/todoFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="140dp"
-        android:backgroundTint="@color/darkpurple"
-        android:text="@string/add_task"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:clickable="true"
+        android:src="@android:drawable/ic_input_add"
+        app:elevation="6dp"
+        app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.904"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.887" />
-
+        app:layout_constraintTop_toBottomOf="@+id/text_todo" />
+    <ListView
+        android:id="@+id/todoListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="1dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
