--- a/planningbuddy/app/src/main/res/layout/fragment_courses.xml
+++ b/planningbuddy/app/src/main/res/layout/fragment_courses.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context=".ui.courses.CourseFragment">
+
     <TextView
         android:id="@+id/text_course"
         android:layout_width="match_parent"
@@ -33,10 +35,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_course" />
+
     <ListView
         android:id="@+id/courseListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@android:color/darker_gray"
-        android:dividerHeight="1dp"/>
+        android:dividerHeight="1dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
