--- a/planningbuddy/app/src/main/res/layout/add_assignments_popup.xml
+++ b/planningbuddy/app/src/main/res/layout/add_assignments_popup.xml
@@ -5,14 +5,14 @@
     android:id="@+id/addAssignmentPopup"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="20dp"
-    android:background="#c2f7ca">
+    android:background="@color/accentbg"
+    android:padding="20dp">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/assignmentNameInputLayout"
         android:layout_width="match_parent"
-        android:padding="5dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="5dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/assignmentNameEditText"
@@ -24,9 +24,9 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/assignmentDateInputLayout"
         android:layout_width="match_parent"
-        android:padding="5dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/assignmentNameInputLayout">
+        android:layout_below="@+id/assignmentNameInputLayout"
+        android:padding="5dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/assignmentDateEditText"
@@ -38,9 +38,9 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/assignmentCourseInputLayout"
         android:layout_width="match_parent"
-        android:padding="5dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/assignmentDateInputLayout">
+        android:layout_below="@+id/assignmentDateInputLayout"
+        android:padding="5dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/assignmentCourseEditText"
@@ -55,12 +55,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/assignmentCourseInputLayout"
         android:text="Completed" />
+
     <Button
         android:id="@+id/addAssignmentButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Assignment"
-        android:layout_below="@+id/assignmentCompletedCheckBox"/>
+        android:layout_below="@+id/assignmentCompletedCheckBox"
+        android:text="Add Assignment" />
 
 
 </RelativeLayout>
