--- a/planningbuddy/app/src/main/res/layout/add_course_popup.xml
+++ b/planningbuddy/app/src/main/res/layout/add_course_popup.xml
@@ -4,14 +4,14 @@
     android:id="@+id/addCoursePopup"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="20dp"
-    android:background="#62def8">
+    android:background="@color/accentbg"
+    android:padding="20dp">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/courseDepartmentInputLayout"
         android:layout_width="65dp"
-        android:padding="5dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="5dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -22,35 +22,36 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/courseNumberInputLayout"
         android:layout_width="85dp"
-        android:padding="5dp"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/courseDepartmentInputLayout">
+        android:layout_toEndOf="@+id/courseDepartmentInputLayout"
+        android:padding="5dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:inputType="number"
-            android:hint="2340" />
+            android:hint="2340"
+            android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/courseNameInputLayout"
         android:layout_width="350dp"
-        android:padding="5dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/courseDepartmentInputLayout">
+        android:layout_below="@+id/courseDepartmentInputLayout"
+        android:padding="5dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Prof. Burdell" />
     </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/courseLocationInputLayout"
         android:layout_width="350dp"
-        android:padding="5dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/courseNameInputLayout">
+        android:layout_below="@+id/courseNameInputLayout"
+        android:padding="5dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -125,13 +126,13 @@
         android:layout_toRightOf="@+id/endTextView"
         android:ems="10"
         android:inputType="date" />
+
     <Button
         android:id="@+id/addCourseButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Course"
-        android:layout_below="@+id/editTextEndDate"/>
-
+        android:layout_below="@+id/editTextEndDate"
+        android:text="Add Course" />
 
 
 </RelativeLayout>
