--- a/planningbuddy/app/src/main/res/layout/fragment_dashboard.xml
+++ b/planningbuddy/app/src/main/res/layout/fragment_dashboard.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     tools:context=".ui.dashboard.DashboardFragment">
 
     <TextView
@@ -19,6 +20,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/assignmentFab"
         android:layout_width="wrap_content"
@@ -27,6 +29,7 @@
         android:layout_margin="16dp"
         android:clickable="true"
         android:src="@android:drawable/ic_input_add"
+        app:backgroundTint="@color/accent"
         app:elevation="6dp"
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -40,15 +43,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="@android:color/darker_gray"
-        app:layout_constraintTop_toBottomOf="@+id/sortSpinner"
-        android:dividerHeight="1dp">
-    </ListView>
+        android:dividerHeight="1dp"
+        app:layout_constraintTop_toBottomOf="@+id/sortSpinner"></ListView>
+
     <androidx.appcompat.widget.AppCompatSpinner
         android:id="@+id/sortSpinner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
     </androidx.appcompat.widget.AppCompatSpinner>
 </androidx.constraintlayout.widget.ConstraintLayout>
