--- a/planningbuddy/app/src/main/res/layout/fragment_notifications.xml
+++ b/planningbuddy/app/src/main/res/layout/fragment_notifications.xml
@@ -27,16 +27,19 @@
         android:layout_margin="16dp"
         android:clickable="true"
         android:src="@android:drawable/ic_input_add"
+        app:backgroundTint="@color/accent"
         app:elevation="6dp"
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_notifications" />
+
     <ListView
         android:id="@+id/examsListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/background"
         android:divider="@android:color/darker_gray"
-        android:dividerHeight="1dp"/>
+        android:dividerHeight="1dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
