--- a/planningbuddy/app/src/main/res/values/colors.xml
+++ b/planningbuddy/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="primary">#7A3B67</color>
+    <color name="accent">#8075FF</color>
+    <color name="background">#2C2C2E</color>
+    <color name="accentbg">#5FBB97</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
