--- a/planningbuddy/app/src/main/res/layout/fragment_dashboard.xml
+++ b/planningbuddy/app/src/main/res/layout/fragment_dashboard.xml
@@ -50,6 +50,8 @@
         android:id="@+id/sortSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
+        android:foregroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
