--- a/planningbuddy/app/src/main/res/layout/list_course_item.xml
+++ b/planningbuddy/app/src/main/res/layout/list_course_item.xml
@@ -1,8 +1,8 @@
-
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/background"
     android:orientation="horizontal"
     android:padding="8dp">
 
@@ -11,15 +11,17 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:textColor="@color/white"
         android:textSize="16sp"
-        android:textColor="@android:color/black"/>
+        tools:text="Test text" />
 
     <!-- Delete Button -->
     <ImageButton
         android:id="@+id/deleteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="?android:selectableItemBackground"
         android:src="@android:drawable/ic_menu_delete"
-        android:background="?android:selectableItemBackground"/>
+        android:tint="@color/white" />
 
 </LinearLayout>
