--- a/planningbuddy/app/src/main/res/layout/list_task_item.xml
+++ b/planningbuddy/app/src/main/res/layout/list_task_item.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -15,7 +16,6 @@
         android:layout_marginRight="8dp"
         android:buttonTint="@color/white" />
 
-    <!-- TextView to display task information -->
     <TextView
         android:id="@+id/examInfoTextView"
         android:layout_width="0dp"
@@ -25,13 +25,12 @@
         android:textSize="16sp"
         tools:text="This is test text." />
 
-    <!-- Delete Button -->
     <ImageButton
         android:id="@+id/deleteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?android:selectableItemBackground"
         android:src="@android:drawable/ic_menu_delete"
-        android:tint="@color/white" />
+        app:tint="@color/white" />
 
 </LinearLayout>
